--- a/paper.tex
+++ b/paper.tex
@@ -2,7 +2,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{diffcoeff}
+\usepackage{float}
 \usepackage{pgf}
+\usepackage{indentfirst}
+\usepackage[labelfont=bf,skip=5pt]{caption}
 
 \usepackage[backend=bibtex,style=nature,hyperref=true,autocite=superscript]{biblatex}
 \addbibresource{paper.bib}
@@ -10,7 +13,7 @@
 \usepackage{hyperref}
 \hypersetup{
   colorlinks = true,
-  citecolor = {blue}
+  allcolors = blue
 }
 
 %\usepackage{layouts}
@@ -22,6 +25,12 @@
 \author{Bao-Hiep Le}
 \date{\today}
 
+\topmargin -1in
+\textheight 9in
+\oddsidemargin -.25in
+\evensidemargin -.25in
+\textwidth 7in
+
 \begin{document}
 
 \maketitle
@@ -29,12 +38,101 @@
 % Set this value as figure width in matplotlib
 %\printinunitsof{in}\prntlen{\textwidth}
 
-This paper uses data from Our World in Data COVID-19 dataset \autocite{owid-covid-data}.
-\section*{Introduction}
+\section*{Data}
 
-\begin{align*}
-\frac{1}{P} \cdot \diff{P}{t} &= aP + b
-\end{align*}
+This paper uses data from \texttt{Our World in Data COVID-19 dataset} \autocite{owid-covid-data}.
+
+The period chosen is April 1 to April 30, 2020. Table \ref{table:1} gives some samples from that period.
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{ |c|c| }
+  \hline
+  \textbf{Date} & \textbf{Total number death cases} \\
+  \hline
+  April 1, 2020 & 9387 \\
+  April 2, 2020 & 10348 \\
+  April 3, 2020 & 11198 \\
+  April 4, 2020 & 11947 \\
+  April 5, 2020 & 12641 \\
+  \hline
+\end{tabular}
+\caption{Total number of COVID-19 death cases in Spain from April 1 to April 5, 2020.}
+\label{table:1}
+\end{table}
+
+\section*{Model}
+
+Let $P(t)$ be the total number of death cases $t$ days after April 1, 2020.
+The growth rate $\diff{P}{t}$, which represents daily new death cases,
+is calculated using the formula:
+
+\begin{align} \label{rate_formula}
+\diff{P}{t}(t_i) =
+\renewcommand{\arraystretch}{2.5}\left\{\begin{array}{@{}l@{\quad}l@{}}
+  \dfrac{1}{2} \left [ P(t_{i + 1}) - P(t_{i - 1}) \right ] &\text{if } 0 < i < n \\
+  \dfrac{1}{2} P(t_{1}) - P(t_{0}) &\text{if } i = 0 \\
+  \dfrac{1}{2} P(t_{n}) - P(t_{n - 1}) &\text{if } i = n \\
+\end{array}\right.\kern-\nulldelimiterspace
+\end{align}
+
+%Table \ref{table:2} gives sample values of $P$, $\diff{P}{t}$, and the relative growth rate $\frac{1}{P} \diff{P}{t}$.
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c| }
+  \hline
+  $t$ (days) & 0 & 2 & 4 & 6 & 8 & 10\\
+  \hline
+  $P$ (observed) & 9387 & 11198 & 12641 & 14045 & 15447 & 16606 \\
+  \hline
+  $\diff{P}{t}$ & 961.0 & 799.5 & 697.0 & 725.5 & 644.5 & 564.0 \\
+  \hline
+  $\frac{1}{P} \diff{P}{t}$ & 0.102376 & 0.071397 & 0.055138 & 0.051655 & 0.041723 & 0.033964 \\
+  \hline
+\end{tabular}
+\caption{Sample values of $P$, $\diff{P}{t}$, and the relative growth rate $\frac{1}{P} \diff{P}{t}$.}
+\label{table:2}
+\end{table}
+
+\begin{figure}[H]
+  \begin{center}
+    \input{fig1.pgf}
+  \end{center}
+  \caption{Total number of COVID-19 death cases in Spain from April 1 to April 30, 2020.}
+\end{figure}
+
+For this paper, we use a variant of the Logistic Growth Model:
+
+\begin{equation} \label{model_eqn}
+\frac{1}{P} \cdot \diff{P}{t} = aP + b
+\end{equation}
+
+The coefficients $a$ and $b$ are determined using least squares polynomial fit:
+
+\begin{align} \label{coef}
+\begin{split}
+a &= -4.827879002776788 \times 10^{-6} \\
+b &= 0.12215521367938273
+\end{split}
+\end{align}
+
+\begin{figure}[H]
+  \begin{center}
+    \input{fig3.pgf}
+  \end{center}
+  \caption{Relative growth rate, $\frac{1}{P} \cdot \diff{P}{t}$ (red points), as a function of $P$ and the best fitted line (blue).}
+\end{figure}
+
+\section*{Solving Differential Equation}
+
+Equation \ref{model_eqn} is separable. We have:
+
+\begin{equation}
+\frac{\dl{P}}{P(aP + b)} = \dl{t}
+\end{equation}
+
+Integrate both sides;
 
 \begin{equation} \label{int_eqn}
 \int \frac{\dl{P}}{P(aP + b)} = \int \dl{t}
@@ -42,15 +140,15 @@ This paper uses data from Our World in Data COVID-19 dataset \autocite{owid-covi
 
 To evaluate the integral on the left side, we use partial fraction decomposition:
 
-\begin{align*}
+\begin{equation*}
 \frac{1}{P(aP + b)} = \frac{X}{P} + \frac{Y}{aP + b}
-\end{align*}
+\end{equation*}
 
 Multiplying both sides of this equation by $P(aP + b)$ and rearranging the terms, we have:
 
-\begin{align*}
+\begin{equation*}
 1 = (Xa + Y)P + Xb
-\end{align*}
+\end{equation*}
 
 The polynomials are identical, so their coefficients must be equal:
 
@@ -61,9 +159,9 @@ Xb &= 1
 
 We get $X = \dfrac{1}{b}$ and $Y = \dfrac{-a}{b}$. Therefore:
 
-\begin{align*}
+\begin{equation*}
 \frac{1}{P(aP + b)} = \frac{1}{b} \cdot \frac{1}{P} - \frac{a}{b} \cdot \frac{1}{aP + b}
-\end{align*}
+\end{equation*}
 
 We can now rewrite equation \ref{int_eqn} as:
 
@@ -77,19 +175,51 @@ We can now rewrite equation \ref{int_eqn} as:
 
 where $A = \pm e^{bC}$. Solving for P, we get:
 
-\begin{align*}
+\begin{equation} \label{final_eqn}
 P = \frac{bAe^{bt}}{1 - aAe^{bt}}
-\end{align*}
+\end{equation}
+
+The growth rate is:
+
+\begin{equation} \label{final_rate_eqn}
+\diff{P}{t} = \frac{b^2Ae^{bt}}{\left ( 1 - aAe^{bt} \right ) ^2}
+\end{equation}
 
 We find the value of A by putting $t = 0$ in equation \ref{int2_eqn}:
 
-\begin{align*}
+\begin{equation*}
 A = \frac{P_0}{aP_0 + b}
-\end{align*}
+\end{equation*}
 
-\begin{align*}
-\diff{P}{t} &= \dfrac{b^2Ae^{bt}}{\left ( 1 - aAe^{bt} \right ) ^2}
-\end{align*}
+Substituting coefficients from \ref{coef} and $P_0 = 9387$:
+
+\begin{equation*}
+A = 122169.433209181
+\end{equation*}
+
+\begin{figure}[H]
+  \begin{center}
+    \input{fig4.pgf}
+  \end{center}
+  \caption{Total number of COVID-19 death cases in Spain from April 1 to
+  April 30, 2020 from official data (red points). The blue line is the
+  theoretical prediction using equation \ref{final_eqn} with
+  $a = -4.827879002776788 \times 10^{-6}$,
+  $b = 0.12215521367938273$, and $A = 122169.433209181$.}
+\end{figure}
+
+\begin{figure}[H]
+  \begin{center}
+    \input{fig5.pgf}
+  \end{center}
+  \caption{The growth rate of $P(t)$ calculated using formula \ref{rate_formula} (red points)
+  and theoretical prediction using equation \ref{final_rate_eqn}.}
+\end{figure}
+
+\section*{Discussion}
+
+The source code of this paper is published at
+\url{https://github.com/hieplpvip/mth252-assignment}.
 
 \printbibliography
 
