--- a/paper.tex
+++ b/paper.tex
@@ -71,8 +71,8 @@ is calculated using the formula:
 \diff{P}{t}(t_i) =
 \renewcommand{\arraystretch}{2.5}\left\{\begin{array}{@{}l@{\quad}l@{}}
   \dfrac{1}{2} \left [ P(t_{i + 1}) - P(t_{i - 1}) \right ] &\text{if } 0 < i < n \\
-  \dfrac{1}{2} P(t_{1}) - P(t_{0}) &\text{if } i = 0 \\
-  \dfrac{1}{2} P(t_{n}) - P(t_{n - 1}) &\text{if } i = n \\
+  P(t_{1}) - P(t_{0}) &\text{if } i = 0 \\
+  P(t_{n}) - P(t_{n - 1}) &\text{if } i = n \\
 \end{array}\right.\kern-\nulldelimiterspace
 \end{align}
 
