Add full data as appendix

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -417,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f83851efb20>]"
+       "[<matplotlib.lines.Line2D at 0x7fe7072e2910>]"
       ]
      },
      "execution_count": 10,
@@ -471,7 +471,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8385057d60>]"
+       "[<matplotlib.lines.Line2D at 0x7fe707147d00>]"
       ]
      },
      "execution_count": 13,
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8385045250>]"
+       "[<matplotlib.lines.Line2D at 0x7fe707136250>]"
       ]
      },
      "execution_count": 16,
@@ -639,7 +639,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8384faa160>]"
+       "[<matplotlib.lines.Line2D at 0x7fe70709c130>]"
       ]
      },
      "execution_count": 22,
@@ -696,7 +696,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8384f814c0>]"
+       "[<matplotlib.lines.Line2D at 0x7fe7070734c0>]"
       ]
      },
      "execution_count": 25,
@@ -731,6 +731,38 @@
    "outputs": [],
    "source": [
     "fig.savefig('fig5.pgf', backend='pgf', dpi=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('data.tex', 'w')\n",
+    "\n",
+    "f.write('\\\\begin{table}[h!]\\n')\n",
+    "f.write('\\\\centering\\n')\n",
+    "f.write('\\\\tabulinesep=1.2mm\\n')\n",
+    "f.write('\\\\begin{tabu}{ |c|c|c|c|c| }\\n')\n",
+    "f.write('  \\\\hline\\n')\n",
+    "f.write('  Date & $t$ & $P$ & $\\\\displaystyle\\\\diff{P}{t}$ & $\\\\dfrac{1}{P} \\\\displaystyle\\\\diff{P}{t}$ \\\\\\\\\\n')\n",
+    "f.write('  \\\\hline\\n')\n",
+    "\n",
+    "for i in range(len(df)):\n",
+    "    row = df.iloc[i]\n",
+    "    f.write('  ' + row.date + \\\n",
+    "            ' & ' + str(i) + \\\n",
+    "            ' & ' + str(row.total_deaths) + \\\n",
+    "            ' & ' + str(row.new_deaths) + \\\n",
+    "            ' & ' + str(row.relative_rate) + \\\n",
+    "            '\\\\\\\\\\n')\n",
+    "\n",
+    "f.write('  \\\\hline\\n')\n",
+    "f.write('\\\\end{tabu}\\n')\n",
+    "f.write('\\\\end{table}\\n')\n",
+    "\n",
+    "f.close()"
    ]
   }
  ],
